# tinix

./: CMakeLists.txt  README.md  demo_pc_file_ops.pc  runtest.sh  sh1.tsh  test1.pc  test2.pc
docs/: 项目要求.md
include/: kernel.h
include/common/: config.h
include/fs/: fs_defs.h
include/mem/: memory_manager.h  page_table.h  physical_memory.h
include/proc/: instruction.h  process.h  process_manager.h  program.h
include/shell/: shell.h
src/: kernel.cpp  main.cpp
src/dev/: disk.cpp
src/fs/: directory_manager.cpp  file_system.cpp
src/mem/: memory_manager.cpp  page_table.cpp  physical_memory.cpp
src/proc/: process_manager.cpp  program.cpp
src/shell/: shell.cpp
test/: CMakeLists.txt  run_tinix_tests.py
